🚧(cool-to-dry): Make target fan mode optional

--- a/blueprints/climate_cool_to_dry.yaml
+++ b/blueprints/climate_cool_to_dry.yaml
@@ -73,9 +73,9 @@ blueprint:
           unit_of_measurement: "°C"
 
     fan_mode:
-      name: Target Fan Mode
-      description: Fan mode to set during this dry cycle
-      default: auto
+      name: Target Fan Mode (Optional)
+      description: Fan mode to set during this dry cycle. Set to none to skip.
+      default: none
       selector:
         select:
           options:
@@ -83,6 +83,7 @@ blueprint:
             - low
             - medium
             - high
+            - none
 
     hvac_mode:
       name: Target HVAC Mode (Optional)
@@ -170,6 +171,7 @@ action:
       previous_fan: "{{ state_attr(climate_entity, 'fan_mode') }}"
       previous_mode: "{{ states(climate_entity) }}"
       hvac_mode: !input hvac_mode
+      fan_mode: !input fan_mode
       ac_was_off: "{{ is_state(climate_entity, 'off') }}"
 
   - service: climate.set_temperature
@@ -178,11 +180,16 @@ action:
     data:
       temperature: !input target_temperature
 
-  - service: climate.set_fan_mode
-    target:
-      entity_id: !input climate_entity
-    data:
-      fan_mode: !input fan_mode
+  - choose:
+      - conditions:
+          - condition: template
+            value_template: "{{ fan_mode != 'none' }}"
+        sequence:
+          - service: climate.set_fan_mode
+            target:
+              entity_id: !input climate_entity
+            data:
+              fan_mode: "{{ fan_mode }}"
 
   - choose:
       - conditions:
@@ -203,7 +210,6 @@ action:
   - delay: !input run_duration
 
   # 3) Restore original settings
-
   - choose:
       - conditions:
           - condition: template
@@ -230,11 +236,16 @@ action:
     data:
       temperature: "{{ previous_temp }}"
 
-  - service: climate.set_fan_mode
-    target:
-      entity_id: !input climate_entity
-    data:
-      fan_mode: "{{ previous_fan }}"
+  - choose:
+      - conditions:
+          - condition: template
+            value_template: "{{ fan_mode != 'none' }}"
+        sequence:
+          - service: climate.set_fan_mode
+            target:
+              entity_id: !input climate_entity
+            data:
+              fan_mode: "{{ previous_fan }}"
 
   # 4) Optional notify if humidity still high
   - choose:
