--- a/blueprints/climate_cool_to_dry.yaml
+++ b/blueprints/climate_cool_to_dry.yaml
@@ -3,7 +3,7 @@ blueprint:
   description: >
     # ❄️Humidity & Temp Cool-to-Dry
     
-    **Version: 1.2**
+    **Version: 1.3**
 
     Automatically triggers a cool-to-dry cycle if humidity or temperature exceed thresholds.  
     The cycle adjusts HVAC settings and restores previous values when done.  
@@ -17,6 +17,7 @@ blueprint:
      - **1.0** Initial version  
      - **1.1** Fixed race condition: prevent restarting AC if already on; start AC/HVAC mode before setting temperature and fan
      - **1.2** Add delays between climate operations to prevent race conditions
+     - **1.3** Added option to choose between an absolute target temperature or a relative offset to lower the current temperature
 
     </details>
 
@@ -91,6 +92,17 @@ blueprint:
       icon: mdi:target
       collapsed: true
       input:
+
+        temperature_mode:
+          name: Temperature Mode *
+          description: Choose “target” for an absolute setpoint or “offset” to lower current temp
+          default: target
+          selector:
+            select:
+              options:
+                - target
+                - offset
+
         target_temperature:
           name: Target Temperature (°C) *
           description: Target temperature to set during this dry cycle
@@ -99,7 +111,20 @@ blueprint:
             number:
               min: 16
               max: 30
+              step: 0.5
               unit_of_measurement: "°C"
+
+        temperature_offset:
+          name: Temperature Offset (°C) *
+          description: How many degrees to lower the temperature during this dry cycle
+          default: 2.0
+          selector:
+            number:
+              min: 0.5
+              max: 10.0
+              step: 0.5
+              unit_of_measurement: "°C"
+
         fan_mode:
           name: Target Fan Mode
           description: Fan mode to set during this dry cycle. Set to none to skip.
@@ -168,12 +193,22 @@ trigger:
     entity_id: !input humidity_sensors
 
 variables:
+  climate_entity: !input climate_entity
   dry_cycle_interval: !input dry_cycle_interval
   temperature_threshold: !input temperature_threshold
   temperature_sensors: !input temperature_sensors
   humidity_sensors: !input humidity_sensors
   humidity_threshold: !input humidity_threshold
   operation_delay: !input operation_delay
+  temperature_mode: !input temperature_mode
+  static_target_temperature: !input target_temperature
+  temperature_offset: !input temperature_offset
+  computed_target_temperature: >
+    {% if temperature_mode == 'target' %}
+      {{ static_target_temperature }}
+    {% else %}
+      {{ (state_attr(climate_entity,'temperature') - temperature_offset) | round(1) }}
+    {% endif %}
 
 condition:
   # 1) Only proceed if at least dry_cycle_interval minutes have passed since last_run_datetime
@@ -218,7 +253,6 @@ action:
 
   # 1) Save the previous state for restoration
   - variables:
-      climate_entity: !input climate_entity
       previous_temp: "{{ state_attr(climate_entity, 'temperature') }}"
       previous_fan: "{{ state_attr(climate_entity, 'fan_mode') }}"
       previous_mode: "{{ states(climate_entity) }}"
@@ -258,7 +292,7 @@ action:
     target:
       entity_id: !input climate_entity
     data:
-      temperature: !input target_temperature
+      temperature: "{{ computed_target_temperature }}"
 
   # Set the target FAN mode if needed
   - choose:
